# rusty-v8

./: .gitignore  build_context.py  build_graph.py  claude_code.py  context_builder.py  main.py  nohup.out
archive/convert_to_rust/rust_ouput/: Cargo.toml  lib.rs
archive/convert_to_rust/rust_ouput/include/: v8-array-buffer.rs  v8-callbacks.rs  v8-container.rs  v8-context.rs  v8-cppgc.rs  v8-data.rs  v8-date.rs  v8-debug.rs  v8-embedder-heap.rs  v8-embedder-state-scope.rs  v8-exception.rs  v8-extension.rs  v8-external-memory-accounter.rs  v8-external.rs  v8-fast-api-calls.rs  v8-forward.rs  v8-function-callback.rs  v8-function.rs  v8-handle-base.rs  v8-initialization.rs  v8-inspector-protocol.rs  v8-inspector.rs  v8-internal.rs  v8-isolate.rs  v8-json.rs  v8-local-handle.rs  v8-locker.rs  v8-maybe.rs  v8-memory-span.rs  v8-message.rs  v8-metrics.rs  v8-microtask-queue.rs  v8-microtask.rs  v8-object.rs  v8-persistent-handle.rs  v8-platform.rs  v8-primitive-object.rs  v8-primitive.rs  v8-profiler.rs  v8-promise.rs  (+25 more)
archive/convert_to_rust/rust_ouput/include/cppgc/: allocation.rs  common.rs  cross-thread-persistent.rs  custom-space.rs  default-platform.rs  ephemeron-pair.rs  explicit-management.rs  garbage-collected.rs  heap-consistency.rs  heap-handle.rs  heap-state.rs  heap-statistics.rs  heap.rs  liveness-broker.rs  macros.rs  member.rs  name-provider.rs  object-size-trait.rs  persistent.rs  platform.rs  prefinalizer.rs  process-heap-statistics.rs  sentinel-pointer.rs  source-location.rs  testing.rs  trace-trait.rs  (+2 more)
ast_graph/: CMakeLists.txt  code_graph.cpp  run.sh
(+12407 files in other folders)
