[package]
name = "v8-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add common dependencies that might be needed for V8 conversion
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"
num-traits = "0.2"
bitflags = "2.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bench]]
name = "benchmarks"
harness = false
